fix flex box issues on firefox

--- a/workspace/custom.css
+++ b/workspace/custom.css
@@ -2797,10 +2797,13 @@ td.bwt-store-hours-table-date-column:after {
   .bw-display-layer .bwt-store-show .bwt-store-hours-modal {
     width: 80% !important;
   }
-  .bw-display-layer .bwt-store-show .bwt-store-features-container .bwt-store-feature {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  .bw-display-layer .bwt-store-show .bwt-store-feature-description {
+    margin-top: 50%;
+    margin-left: 5%;
+  }
+  .bw-display-layer .bwt-store-show .bwt-store-features-container .bwt-store-feature .bwt-store-feature-content{
+    top: 50% !important;
+    transform: translateY(-50%) !important;
   }
   .bw-display-layer .bwt-store-show .bwt-store-alert-container .store-alert-container {
     background-color: #F2F1EF !important;
